# stream-manipulator-3D

./: .travis.yml  LICENSE.txt  README.md
rqt-stream-manipulator-3d/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml  rqt_plugin.xml
rqt-stream-manipulator-3d/include/rqt_stream_manipulator_3d/: plugin.h  rqt_stream_manipulator.h  wait_for_dialog.h
rqt-stream-manipulator-3d/include/rqt_stream_manipulator_3d/filters/: cropbox.h  frustum.h  median.h  passthrough.h  radius_outlier.h  statistical_outlier.h  voxel_grid.h
rqt-stream-manipulator-3d/include/rqt_stream_manipulator_3d/output/: publisher.h
rqt-stream-manipulator-3d/resources/: resources.qrc
rqt-stream-manipulator-3d/src/: plugin.cpp  rqt_stream_manipulator.cpp  rqt_stream_manipulator.ui  wait_for_dialog.cpp
rqt-stream-manipulator-3d/src/filters/: cropbox.cpp  cropbox.ui  frustum.cpp  frustum.ui  median.cpp  median.ui  passthrough.cpp  passthrough.ui  radius_outlier.cpp  radius_outlier.ui  statistical_outlier.cpp  statistical_outlier.ui  voxel_grid.cpp  voxel_grid.ui
rqt-stream-manipulator-3d/src/output/: publisher.cpp  publisher.ui
stream-manipulator-3d/: CHANGELOG.rst  CMakeLists.txt  default_config.yaml  package.xml  plugins.xml  sm3d.rviz
stream-manipulator-3d/include/stream_manipulator_3d/: common_pcl.h  common_ros.h  common_std.h  nodes_base.hpp  plugin.hpp  shared_memory_handler.hpp  stream_manipulator.h  subscriber.hpp
stream-manipulator-3d/include/stream_manipulator_3d/filters/: cropbox.hpp  frustum.hpp  median.hpp  passthrough.hpp  radius_outlier.hpp  statistical_outlier.hpp  voxel_grid.hpp
stream-manipulator-3d/include/stream_manipulator_3d/filters/config/: cropbox_config.hpp  frustum_config.hpp  median_config.hpp  passthrough_config.hpp  radius_outlier_config.hpp  statistical_outlier_config.hpp  voxel_grid_config.hpp
stream-manipulator-3d/include/stream_manipulator_3d/output/: publisher.hpp
stream-manipulator-3d/include/stream_manipulator_3d/output/config/: publisher_config.hpp
stream-manipulator-3d/launch/: stream_manipulator.launch
stream-manipulator-3d/src/: common_ros.cpp  main.cpp  stream_manipulator.cpp
stream-manipulator-3d/src/filters/: cropbox.cpp  frustum.cpp  median.cpp  passthrough.cpp  radius_outlier.cpp  statistical_outlier.cpp  voxel_grid.cpp
stream-manipulator-3d/src/output/: publisher.cpp
