<?xml version="1.0"?>

<!--
  Software License Agreement (BSD License)
  
    PaCMan Vision (PaCV) - https://github.com/Tabjones/pacman_vision
    Copyright (c) 2015-2016, Federico Spinelli (fspinelli@gmail.com)
    All rights reserved.
  
  Redistribution and use in source and binary forms, with or without
  modification, are permitted provided that the following conditions are met:
  
  * Redistributions of source code must retain the above copyright notice, this
    list of conditions and the following disclaimer.
  
  * Redistributions in binary form must reproduce the above copyright notice,
    this list of conditions and the following disclaimer in the documentation
    and/or other materials provided with the distribution.
  
  * Neither the name of the copyright holder(s) nor the names of its
    contributors may be used to endorse or promote products derived from
    this software without specific prior written permission.
  
  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<!--
     Package xml format2.
     See here http://www.ros.org/reps/rep-0140.html#id28
-->
<package format="2">
  <name>pacman_vision</name>
  <version>1.0.0</version>
  <description>The PaCMan Vision modular node</description>

  <maintainer email="fspinelli@gmail.com">Tabjones</maintainer>
  <license>PaCMaN</license>
  <author email="fspinelli@gmail.com">Tabjones</author>

  <!-- Use buildtool_depend for build tool packages: either catkin or cmake-->
  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use exec_depend for packages you need when executing the package: -->
  <!-- Use depend as alias for build_depend and exec_depend -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>pacman_vision_comm</depend>

  <exec_depend>asus_scanner_models</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>calibration</exec_depend>

  <depend>pel</depend>

  <export>
  </export>

</package>
