<?xml version="1.0"?>

<!--
  Software License Agreement (BSD License)
  
    Stream Manipulator 3d - https://github.com/3DVision-Stack/stream-manipulator-3D
    Copyright (c) 2016, Federico Spinelli (fspinelli@gmail.com)
    All rights reserved.
  
  Redistribution and use in source and binary forms, with or without
  modification, are permitted provided that the following conditions are met:
  
  * Redistributions of source code must retain the above copyright notice, this
    list of conditions and the following disclaimer.
  
  * Redistributions in binary form must reproduce the above copyright notice,
    this list of conditions and the following disclaimer in the documentation
    and/or other materials provided with the distribution.
  
  * Neither the name of the copyright holder(s) nor the names of its
    contributors may be used to endorse or promote products derived from
    this software without specific prior written permission.
  
  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<!--
     Package xml format2.
     See here http://www.ros.org/reps/rep-0140.html#id28
-->
<package format="2">
  <name>stream_manipulator_3d</name>
  <version>0.1.5</version>
  <description>
      Stream Manipulator 3D let's you subscribe to a stream of point
      clouds, such as those coming from sensors, and manipulate it 
      online, republishing the modified streams. Input stream can be
      modified by applying various filters, in the order you choose.
  </description>

  <maintainer email="fspinelli@gmail.com">Tabjones</maintainer>
  <license>BSD</license>
  <author email="fspinelli@gmail.com">Tabjones</author>
  <url type="repository">https://github.com/3DVision-Stack/stream-manipulator-3D</url>
  <url type="bugtracker">https://github.com/3DVision-Stack/stream-manipulator-3D/issues</url>

  <!-- Use buildtool_depend for build tool packages: either catkin or cmake-->
  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use exec_depend for packages you need when executing the package: -->
  <!-- Use depend as alias for build_depend and exec_depend -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>roslib</depend>
  <depend>visualization_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
      <stream_manipulator_3d plugin="${prefix}/plugins.xml"/>
  </export>
</package>
